test/conformance/kuttl/validate/policy/standard/psa/test-exclusion-capabilities/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: default
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      capabilities:
        add:
        - bar
        - baz
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      capabilities:
        add:
        - baz
  ephemeralContainers:
  - name: nginx3
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      capabilities:
        add:
        - foo
