test/conformance/kuttl/validate/policy/standard/psa/test-exclusion-capabilities/excluded-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: excluded-pod
  namespace: default
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      capabilities:
        add:
        - foo
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      capabilities:
        add:
        - baz
  # ephemeralContainers:
  # - name: nginx3
  #   image: nginx
  #   args:
  #   - sleep
  #   - 1d
  #   securityContext:
  #     capabilities:
  #       add:
  #       - foo
  #       - baz
